# UnityGaussianSplatting

./: .gitattributes  .gitignore  LICENSE.md  README_SAAKYAN.md  readme.md
Assets/: GSTestScene.unity  Scene.unity
Assets/GaussianSplatting/Materials/: RenderPoints.mat
Assets/GaussianSplatting/Scripts/: FilePickerAttribute.cs  FolderPickerAttribute.cs  GaussianCutout.cs  GaussianSplatAsset.cs  GaussianSplatAssetByteBuffer.cs  GaussianSplatHDRPPass.cs  GaussianSplatRenderer.cs  GaussianSplatURPFeature.cs  GaussianSplatting.asmdef  GaussianUtils.cs  PLYFileReader.cs
Assets/GaussianSplatting/Shaders/: BlackSkybox.shader  GaussianComposite.shader  GaussianDebugDisplayData.shader  GaussianDebugRenderBoxes.shader  (+5 more)
Assets/Scripts/: BufferSorter.cs  FolderPickerAttribute.cs  GaussianSplatRenderer.cs  GaussianSplatRendererEditor.cs  PLYFileReader.cs
Assets/Shaders/: BufferSorter.compute  DebugSingleSplat.shader  GaussianSplatting.hlsl  RenderGaussianSplats.mat  RenderGaussianSplats.shader  RenderPointsSimple.mat  RenderPointsSimple.shader  SplatUtilities.compute
Assets/SyntheticGen/: SyntheticGen.unity  SyntheticParams.cs  SyntheticSplat.mat
Doc/: render-pipeline-integration.md
ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
Tools/GaussianPress/: CMakeLists.txt  CMakePresets.json
Tools/GaussianPress/src/: compression_helpers.cpp  compression_helpers.h  compressors.cpp  compressors.h  filters.cpp  filters.h  main.cpp  simd.h  systeminfo.cpp  systeminfo.h
docs/: render-pipeline-integration.md  splat-editing.md
org.nesnausk.gaussian-splatting/Editor/: CaptureScreenshot.cs  FilePickerControl.cs  GaussianSplatAssetCreator.cs  GaussianSplatAssetEditor.cs  GaussianSplatRendererEditor.cs  GaussianSplatValidator.cs  KMeansClustering.cs  TinyJsonParser.cs
org.nesnausk.gaussian-splatting/Runtime/: GaussianCutout.cs  GaussianSplatHDRPPass.cs  GaussianSplatRenderer.cs  GaussianSplatting.asmdef  GaussianUtils.cs  GpuSorting.cs
org.nesnausk.gaussian-splatting/Shaders/: SplatUtilities.compute
package/: LICENSE.md  package.json
package/Editor/: GaussianMoveTool.cs  GaussianRotateTool.cs  GaussianScaleTool.cs  GaussianSplatAssetCreator.cs  GaussianSplatAssetEditor.cs  GaussianSplatRendererEditor.cs  GaussianSplatSettingsEditor.cs  GaussianSplatValidator.cs  GaussianSplatsTool.cs  GaussianSplattingEditor.asmdef  GaussianTool.cs  GaussianToolContext.cs  PLYFileReader.cs  TinyJsonParser.cs
package/Materials/: BlackSkybox.mat
package/Runtime/: GaussianCutout.cs  GaussianSplatAsset.cs  GaussianSplatHDRPPass.cs  GaussianSplatRenderOptions.cs  GaussianSplatRenderer.cs  GaussianSplatSettings.cs  GaussianSplatTemporalFilter.cs  GaussianSplatURPFeature.cs  GaussianSplatting.asmdef  GaussianUtils.cs  GpuSorting.cs
package/Shaders/: BlackSkybox.shader  DeviceRadixSort.hlsl  GaussianComposite.shader  GaussianDebugRenderBoxes.shader  GaussianSplatting.hlsl  GpuSortFidelityFX.hlsl  RenderGaussianSplats.shader  SortCommon.hlsl  SphericalHarmonics.hlsl  SplatUtilities.compute
(+111 files in other folders)
